--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -1192,10 +1192,10 @@ textarea:focus {
 }
 
 .logo {
-  margin: 30px 50px 33px 0px;
+  margin: 30px 49px 33px 0px;
 }
 .logo__footer {
-  margin: 33px 65px 0px 0px;
+  margin: 33px 56px 0px 0px;
 }
 .logo_link {
   display: block;
@@ -1203,12 +1203,13 @@ textarea:focus {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
-  width: 221px;
+  width: 222px;
   height: 70px;
-  background: url("../image/logo.png") no-repeat;
+  background: url("../image/logo2.png") no-repeat;
 }
 .logo_link__footer {
-  background: url("../image/logo-f.png") no-repeat;
+  width: 230px;
+  background: url("../image/logo-f2.png") no-repeat;
 }
 .logo_text {
   color: #373737;
@@ -3608,6 +3609,9 @@ textarea:focus {
     }
   }*/
 }
+.block-form, .block-form * {
+  box-sizing: border-box;
+}
 .block-form .messages {
   display: none;
 }
@@ -3620,12 +3624,16 @@ textarea:focus {
   font-size: 26px;
 }
 .block-form_title {
-  width: 675px;
-  float: left;
-  padding: 68px 0px 35px 0px;
+  height: 70px;
+  padding: 22px 0px 22px 0px;
   color: #ffffff;
-  font-size: 26px;
+  font-family: sans;
+  font-size: 24px;
   position: relative;
+}
+.block-form_title p {
+  font-family: sans;
+  font-size: 24px;
 }
 .block-form_title:before {
   content: " ";
@@ -3633,9 +3641,9 @@ textarea:focus {
   position: absolute;
   left: 18px;
   margin: 0px 0px 0px -17px;
-  top: 47px;
-  width: 44px;
-  height: 2px;
+  top: 6px;
+  width: 42px;
+  height: 3px;
   background-color: #ffffff;
 }
 .block-form_bac {
@@ -3654,6 +3662,22 @@ textarea:focus {
 .block-form_wrap {
   position: relative;
   z-index: 2;
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+}
+.block-form_wrap:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .block-form_wrap {
+  height: 1%;
 }
 .block-form_top {
   display: inline-block;
@@ -3692,74 +3716,87 @@ textarea:focus {
   height: 1%;
 }
 .block-form_left {
-  width: 675px;
+  width: 630px;
+  height: 290px;
+  margin: 30px 30px 0 0;
   float: left;
-  padding: 0px 0px 0px 0px;
+  padding: 0;
 }
 .block-form_right {
-  float: right;
-  width: 230px;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 50px;
+  float: left;
+  width: 300px;
+  height: 290px;
+  padding: 0;
+  border: 1px solid #fff;
+  margin-top: 30px;
+  padding: 23px 35px 0px;
 }
 .block-form_descr {
-  font-family: proximanova_light;
-  font-size: 14px;
+  font-family: sans;
+  font-size: 12px;
+  line-height: 16px;
   color: #ffffff;
   text-align: center;
-  line-height: 1.1;
-  padding: 46px 0px 37px 0px;
-  float: right;
-  width: 240px;
+  margin-bottom: 32px;
 }
 .block-form_inner {
-  padding: 0px 0px 11px 0px;
-  text-align: center;
+  padding: 0;
+  -webkit-box-shadow: inset 1px 1px 0px 0px #bfbfbf, -1px -1px 0px 0px #404040;
+  -moz-box-shadow: inset 1px 1px 0px 0px #bfbfbf, -1px -1px 0px 0px #404040;
+  box-shadow: inset 1px 1px 0px 0px #bfbfbf, -1px -1px 0px 0px #404040;
+}
+.block-form_right .block-form_inner {
+  margin-bottom: 20px;
 }
 .block-form_inner input {
   font-size: 16px;
-  width: 184px;
-  height: 44px;
-  border: 1px solid #c2c2c2;
+  width: 100%;
+  height: 34px;
   margin: 0px;
-  padding: 0px 22px 0px 22px;
+  padding: 0px 16px 0px 16px;
+  border: none;
 }
 .block-form_inner textarea {
-  box-sizing: content-box;
   font-size: 16px;
-  width: 629px;
-  height: 164px;
-  border: 1px solid #c2c2c2;
+  width: 100%;
+  height: 220px;
+  border: none;
   margin: 0px;
   padding: 11px 22px 0px 22px;
 }
 .block-form_inner .error {
-  border: 1px solid #ff0000;
+  -webkit-box-shadow: inset 0px 0px 0px 1px red;
+  -moz-box-shadow: inset 0px 0px 0px 1px red;
+  box-shadow: inset 0px 0px 0px 1px red;
 }
 .block-form_button {
   padding: 9px 0px 0px 0px;
   position: relative;
 }
 .block-form_button input {
-  width: 230px;
-  height: 54px;
-  border: 2px solid #ffffff;
-  background-color: transparent;
+  width: 100%;
+  height: 46px;
+  border: none;
+  background-color: #e74c3c;
   font-family: proximanova_bold;
   color: #ffffff;
   font-size: 20px;
   text-transform: uppercase;
   padding: 1px 0px 0px 0px;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -moz-transition: background-color 0.2s ease-in-out;
+  -o-transition: background-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
 }
 .block-form_button input:hover {
   cursor: pointer;
-  border: 2px solid #3498db;
-  background-color: #3498db;
+  background-color: #ed7669;
 }
 .block-form_button .ajax-progress {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
+  bottom: 16px;
+  right: -23px;
 }
 .block-form_button .ajax-progress .throbber {
   background: transparent url("../image/loader-ajax-blue2.gif") no-repeat 0px 0px;
@@ -3770,6 +3807,36 @@ textarea:focus {
   width: 16px;
   /* tweak this according to your gif */
   margin: 0px;
+}
+.block-form ::-webkit-input-placeholder {
+  font-family: sans;
+  color: #727272;
+  font-size: 12px;
+}
+.block-form :-moz-placeholder {
+  font-family: sans;
+  color: #727272;
+  font-size: 12px;
+}
+.block-form ::-moz-placeholder {
+  font-family: sans;
+  color: #727272;
+  font-size: 12px;
+}
+.block-form :-ms-input-placeholder {
+  font-family: sans;
+  color: #727272;
+  font-size: 12px;
+}
+.block-form ::-ms-input-placeholder {
+  font-family: sans;
+  color: #727272;
+  font-size: 12px;
+}
+.block-form :placeholder-shown {
+  font-family: sans;
+  color: #727272;
+  font-size: 12px;
 }
 
 .contacts {
@@ -4809,6 +4876,50 @@ textarea:focus {
   font-size: 15px;
   color: #ffffff;
 }
+.gmap_inner {
+  width: 960px;
+  margin: 0 auto;
+  position: relative;
+}
+.gmap_bubble {
+  position: absolute;
+  left: -9px;
+  top: -476px;
+  width: 435px;
+  height: 406px;
+  background: transparent url("../image/bubble-bac.png") left top no-repeat;
+}
+.gmap_close {
+  position: absolute;
+  top: 168px;
+  right: 53px;
+  width: 32px;
+  height: 32px;
+  background: transparent url("../image/bubble-close.png") left top no-repeat;
+  cursor: pointer;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  -ms-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+}
+.gmap_close:hover {
+  opacity: 0.8;
+}
+.gmap_form {
+  border: 1px solid #fff;
+  position: absolute;
+  right: 0;
+  top: -412px;
+  background: url("../image/action-page-right-bac.jpg") 0% 0% no-repeat;
+  background-size: 100%;
+  width: 300px;
+  height: 345px;
+  margin: 0;
+}
+.gmap_form, .gmap_form * {
+  box-sizing: border-box;
+}
 
 .yamap {
   height: 469px;
@@ -5188,7 +5299,7 @@ textarea:focus {
   padding: 28px 31px 0;
   height: 250px;
   background: transparent url("../image/action-page-middle-bac.png") left top no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 .action-page_middle p {
   font-family: Tahoma;
@@ -5331,7 +5442,7 @@ textarea:focus {
   width: 100%;
   height: 46px;
   border: none;
-  background-color: #e93d3e;
+  background-color: #e74c3c;
   font-family: proximanova_bold;
   color: #ffffff;
   font-size: 20px;
@@ -5345,7 +5456,7 @@ textarea:focus {
 }
 .form-action-new_button input:hover {
   cursor: pointer;
-  background-color: #3498db;
+  background-color: #ed7669;
 }
 .form-action-new_button .ajax-progress {
   position: absolute;
@@ -5449,6 +5560,11 @@ textarea:focus {
   -webkit-box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.29);
   -moz-box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.29);
   box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.29);
+  -webkit-transition: box-shadow 0.2s ease-in-out;
+  -moz-transition: box-shadow 0.2s ease-in-out;
+  -o-transition: box-shadow 0.2s ease-in-out;
+  -ms-transition: box-shadow 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
 }
 .newactions_item:visited {
   color: #fff;
@@ -5467,6 +5583,11 @@ textarea:focus {
 }
 .newactions_item:nth-child(3n) {
   margin-right: 0;
+}
+.newactions_item:hover {
+  -webkit-box-shadow: -5px -5px 3px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: -5px -5px 3px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: -5px -5px 3px 0px rgba(0, 0, 0, 0.3);
 }
 .newactions_image {
   border: 1px solid #fff;
@@ -5557,6 +5678,11 @@ textarea:focus {
   /*&:hover .other_image:before{
     @include def-opacity(0.5);
   }*/
+  -webkit-transition: box-shadow 0.2s ease-in-out;
+  -moz-transition: box-shadow 0.2s ease-in-out;
+  -o-transition: box-shadow 0.2s ease-in-out;
+  -ms-transition: box-shadow 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
 }
 .newother_item:visited {
   color: #fff;
@@ -5572,6 +5698,11 @@ textarea:focus {
 }
 .newother_item:first-child {
   margin: 0px;
+}
+.newother_item:hover {
+  -webkit-box-shadow: -5px -5px 3px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: -5px -5px 3px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: -5px -5px 3px 0px rgba(0, 0, 0, 0.3);
 }
 .newother_image {
   height: 200px;
