--- a/sass/_action-page.scss
+++ b/sass/_action-page.scss
@@ -10,6 +10,10 @@
 		height: 345px;
 		margin-right: 30px;
 		position: relative;
+    @include m1000{
+      margin-bottom: 15px;
+      height: auto;
+    }
 		&:before{
 			content: '';
 			position: absolute;
@@ -22,6 +26,9 @@
 			border-style: solid;
 			border-width: 22.5px 0 22.5px 23px;
 			border-color: transparent transparent transparent #17a0da;
+      @include m1000{
+        display: none;
+      }
 		}
 		@include m1000{
 			float: none;
@@ -76,7 +83,11 @@
   	padding: 28px 31px 0;
   	height: 250px;
   	background: transparent url('../image/action-page-middle-bac.png') left top no-repeat;
-  	background-size: 100%;
+  	background-size: 100% 100%;
+    @include m1000{
+      height: auto;
+      padding-bottom: 10px;
+    }
   	p{
   		font-family: Tahoma;
   		font-size: 14px;
