--- a/sass/_block-form.scss
+++ b/sass/_block-form.scss
@@ -1,4 +1,7 @@
 .block-form{
+  &, & *{
+    box-sizing: border-box;
+  }
   @include m1000{
     height: auto;
     padding-bottom: 15px;
@@ -24,21 +27,25 @@
     }
   }*/
   &_title{
-    width: 675px;
-    float: left;
-    padding: 68px 0px 35px 0px;
+    height: 70px;
+    padding: 22px 0px 22px 0px;
     color: #ffffff;
-    font-size: 26px;
+    font-family: sans;
+    font-size: 24px;
     position: relative;
+    p{
+      font-family: sans;
+      font-size: 24px;
+    }
     &:before{
       content: " ";
       display: block;
       position: absolute;
       left: 18px;
       margin: 0px 0px 0px -17px;
-      top: 47px;
-      width: 44px;
-      height: 2px;
+      top: 6px;
+      width: 42px;
+      height: 3px;
       background-color: #ffffff;
       @include m1000{
         top: 10px;
@@ -63,6 +70,7 @@
   &_wrap{
     position: relative;
     z-index: 2;
+    @include clearfix;
     @include m1000{
       z-index: 1;
     }
@@ -74,94 +82,108 @@
     @include clearfix();
   }
   &_left{
-    width: 675px;
+    width: 630px;
+    height: 290px;
+    margin: 30px 30px 0 0;
     float: left;
-    padding: 0px 0px 0px 0px;
+    padding: 0;
     @include m1000{
       float: none;
       width: 100%;
-      max-width: 675px;
+      height: auto;
       margin: 0 auto;
     }
   }
   &_right{
-    float: right;
-    width: 230px;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 50px;
+    float: left;
+    width: 300px;
+    height: 290px;
+    padding: 0;
+    border: 1px solid #fff;
+    margin-top: 30px;
+    padding: 23px 35px 0px;
     @include m1000{
       float: none;
       width: 100%;
       max-width: 230px;
       margin: 0 auto;
+      height: auto;
+      padding-bottom: 15px;
     }
   }
   &_descr{
-    font-family: $light;
-    font-size: 14px;
+    font-family: sans;
+    font-size: 12px;
+    line-height: 16px;
     color: #ffffff;
     text-align: center;
-    line-height: 1.1;
-    padding: 46px 0px 37px 0px;
-    float: right;
-    width: 240px;
+    margin-bottom: 32px;
     @include m1000{
       display: none;
     }
   }
   &_inner{
-    padding: 0px 0px 11px 0px;
-    text-align: center;
+    padding: 0;
+    @include m1000{
+      margin-bottom: 15px;
+    }
+    .block-form_right &{
+      margin-bottom: 20px;
+    }
+    -webkit-box-shadow: inset 1px 1px 0px 0px rgba(191,191,191,1), -1px -1px 0px 0px rgba(64,64,64,1);
+    -moz-box-shadow: inset 1px 1px 0px 0px rgba(191,191,191,1), -1px -1px 0px 0px rgba(64,64,64,1);
+    box-shadow: inset 1px 1px 0px 0px rgba(191,191,191,1), -1px -1px 0px 0px rgba(64,64,64,1);
     input{
       font-size: 16px;
-      width: 184px;
-      height: 44px;
-      border: 1px solid #c2c2c2;
+      width: 100%;
+      height: 34px;
       margin: 0px;
-      padding: 0px 22px 0px 22px;
+      padding: 0px 16px 0px 16px;
+      border: none;
     }
     textarea{
-      box-sizing: content-box;
       font-size: 16px;
-      width: 629px;
-      height: 164px;
-      border: 1px solid #c2c2c2;
+      width: 100%;
+      height: 220px;
+      border: none;
       margin: 0px;
       padding: 11px 22px 0px 22px;
       @include m1000{
-        box-sizing: border-box;
         width: 100%;
+        height: 100px;
       }
     }
     .error{
-      border: 1px solid #ff0000;
+      -webkit-box-shadow: inset 0px 0px 0px 1px rgba(255,0,0,1);
+      -moz-box-shadow: inset 0px 0px 0px 1px rgba(255,0,0,1);
+      box-shadow: inset 0px 0px 0px 1px rgba(255,0,0,1);
     }
   }
   &_button{
     padding: 9px 0px 0px 0px;
     position: relative;
     input{
-      width: 230px;
-      height: 54px;
-      border: 2px solid #ffffff;
-      background-color: transparent;
+      width: 100%;
+      height: 46px;
+      border: none;
+      background-color: #e74c3c;
       font-family: $bold;
       color: #ffffff;
       font-size: 20px;
       text-transform: uppercase;
       padding: 1px 0px 0px 0px;
+      @include def-transition(background-color, 0.2s);
       &:hover{
         cursor: pointer;
-        border: 2px solid #3498db;
-        background-color: #3498db;
+        background-color: lighten(#e74c3c, 10%);
       }
     }
     .ajax-progress{
       position: absolute;
       //top: 10px;
       //left: -6px;
-      bottom: 20px;
-      right: 20px;
+      bottom: 16px;
+      right: -23px;
       .throbber {
         background: transparent url('../image/loader-ajax-blue2.gif') no-repeat 0px 0px; /* tweak this according to your gif */
         float: left;
@@ -170,5 +192,35 @@
         margin: 0px;
       }
     }
+  }
+  ::-webkit-input-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  :-moz-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  ::-moz-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  :-ms-input-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  ::-ms-input-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  :placeholder-shown {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
   }
 }
