--- a/sass/_newother.scss
+++ b/sass/_newother.scss
@@ -24,6 +24,12 @@
     /*&:hover .other_image:before{
       @include def-opacity(0.5);
     }*/
+    @include def-transition(box-shadow, 0.2s);
+    &:hover{
+      -webkit-box-shadow: -5px -5px 3px 0px rgba(0,0,0,0.3);
+      -moz-box-shadow: -5px -5px 3px 0px rgba(0,0,0,0.3);
+      box-shadow: -5px -5px 3px 0px rgba(0,0,0,0.3);
+    }
     @include m1000{
       float: none;
       width: 100%;
@@ -59,7 +65,6 @@
     }
     @include m1000{
       height: auto;
-      margin: 0 0 5px 0;
       img{
         display: block!important;
         width: 100%!important;
